Finally fixed
- the problem was due to Webflow's grid properties overlapping the flex ones

--- a/src/style.css
+++ b/src/style.css
@@ -1003,7 +1003,6 @@
 
 .footer_card-spots {
   white-space: nowrap;
-  align-self: end;
 }
 
 /* ================== */
